# grustyvman

./: Cargo.toml
packaging/: build-rpm.sh  com.github.grustyvman.desktop  grustyvman-viewer.desktop  grustyvman.spec
src/: application.rs  config.rs  error.rs  main.rs
src/backend/: connection.rs  domain.rs  domain_xml.rs  mod.rs  network.rs  nodedev.rs  performance.rs  snapshot.rs  storage.rs  types.rs
src/models/: mod.rs  network_object.rs  pool_object.rs  vm_object.rs
src/ui/: add_disk_dialog.rs  add_hostdev_dialog.rs  add_network_dialog.rs  change_network_source_dialog.rs  clone_vm_dialog.rs  create_network_dialog.rs  create_pool_dialog.rs  create_snapshot_dialog.rs  create_volume_dialog.rs  host_details_view.rs  mod.rs  network_details_view.rs  network_row.rs  perf_graph.rs  pool_details_view.rs  pool_row.rs  rename_vm_dialog.rs  storage_volume_picker_dialog.rs  upload_volume_dialog.rs  vm_config_dialog.rs  vm_creation_dialog.rs  vm_details_view.rs  vm_list_view.rs  vm_performance_view.rs  vm_row.rs  vm_snapshot_view.rs  vm_xml_editor.rs  window.rs
viewer/: Cargo.toml  build.rs
viewer/src/: main.rs  spice_helpers.c
